# crypto_cpp

./: .gitmodules  CMakeLists.txt  asan_cmake_test_and_run.sh  asan_suppressions.txt  bybit_example_config.json  cmake.sh  debug_cmake_and_test.sh  debug_cmake_test_and_run.sh  profile_callgrind.sh  release_cmake_test_and_run.sh  run_asan.sh  run_tsan.sh  todo.txt  tsan_cmake_test_and_run.sh  tsan_suppressions.txt
crypto/: CMakeLists.txt
crypto/include/: BacktestTradingGateway.h  BollingerBandsStrategy.h  ByBitGateway.h  ByBitTradingGateway.h  ByBitTradingMessages.h  DoubleSmaStrategy.h  Enums.h  JsonStrategyConfig.h  ObjectPublisher.h  Optimizer.h  Position.h  RestClient.h  ScopeExit.h  Signal.h  StrategyFactory.h  StrategyInstance.h  StrategyResult.h  Symbol.h  Timerange.h  TimeseriesPublisher.h  TradingPrimitives.h  Types.h  WorkStatus.h  WorkerThread.h  ohlc.h
crypto/interfaces/: StrategyInterface.h
crypto/src/: BacktestTradingGateway.cpp  BollingerBandsStrategy.cpp  ByBitGateway.cpp  ByBitTradingGateway.cpp  ByBitTradingMessages.cpp  DebugEveryTickStrategy.cpp  DoubleSmaStrategy.cpp  Optimizer.cpp  Position.cpp  RestClient.cpp  ScopeExit.cpp  StrategyFactory.cpp  StrategyInstance.cpp  Timerange.cpp  TimeseriesPublisher.cpp  TradingPrimitives.cpp  WorkerThread.cpp  main.cpp  ohlc.cpp
crypto/ta/include/: BollingerBands.h  StandardDeviation.h
crypto/ta/src/: BollingerBands.cpp  SimpleMovingAverage.cpp  StandardDeviation.cpp
frontend/: CMakeLists.txt  DragableChart.cpp  DragableChart.h  MultiSeriesChart.cpp  MultiSeriesChart.h  OptimizerParamsWidget.cpp  OptimizerParamsWidget.h  PositionResultView.cpp  PositionResultView.h  PositionResultView.ui  StrategyParametersWidget.cpp  StrategyParametersWidget.h  chart_window.cpp  chart_window.h  chart_window.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
frontend/crypto/: Backtest.cpp  Backtest.h  BacktestTradingGateway.cpp  BollingerBandsStrategy.cpp  BollingerBandsStrategy.h  ByBitGateway.cpp  ByBitTradingGateway.h  ByBitTradingMessages.h  CMakeLists.txt  GridStrategy.cpp  GridStrategy.h  ObjectPublisher.h  Optimizer.cpp  Optimizer.h  Position.cpp  PositionManager.cpp  PositionManager.h  Signal.cpp  StrategyInstance.cpp  StrategyInstance.h  Timerange.h  WorkStatus.h  ohlc.cpp
frontend/crypto/gateway/: BacktestTradingGateway.cpp  BacktestTradingGateway.h  ByBitGateway.cpp  ByBitGateway.h  ByBitMarketDataGateway.cpp  ByBitMarketDataGateway.h  ByBitTradingGateway.cpp  ByBitTradingGateway.h  ByBitTradingMessages.cpp  ByBitTradingMessages.h  BybitTradesDownloader.cpp  BybitTradesDownloader.h  CMakeLists.txt  ConnectionWatcher.cpp  ConnectionWatcher.h  GatewayConfig.cpp  GatewayConfig.h  IMarketDataGateway.h  ITradingGateway.h  MarketDataMessages.cpp  MarketDataMessages.h
frontend/crypto/gateway/tests/: BybitTradingMessagesTest.cpp  CMakeLists.txt
frontend/crypto/interfaces/: ISubsription.h  ITradingGateway.h  StrategyInterface.h
frontend/crypto/network/: CMakeLists.txt  ConnectionWatcher.cpp  ConnectionWatcher.h  RestClient.cpp  RestClient.h  WebSocketClient.cpp  WebSocketClient.h  restincurl.h
frontend/crypto/optimizer/: CMakeLists.txt  Collector.cpp  Collector.h  ConfigGenerator.cpp  ConfigGenerator.h  Optimizer.cpp  Optimizer.h
frontend/crypto/strategy/: BBRSIStrategy.cpp  BBRSIStrategy.h  BollingerBandsStrategy.cpp  BollingerBandsStrategy.h  CMakeLists.txt  CandleBollingerBandsStrategy.cpp  CandleBollingerBandsStrategy.h  DSMADiffStrategy.cpp  DSMADiffStrategy.h  DebugEveryTickStrategy.cpp  DebugEveryTickStrategy.h  DoubleSmaStrategy.cpp  DoubleSmaStrategy.h  DynamicGridAdxStrategy.cpp  DynamicGridAdxStrategy.h  DynamicGridStrategy.cpp  DynamicGridStrategy.h  DynamicGridWithBan.cpp  DynamicGridWithBan.h  DynamicTrailingStopLossStrategy.cpp  DynamicTrailingStopLossStrategy.h  ExitStrategyBase.cpp  ExitStrategyBase.h  ExitStrategyInterface.h  GridAdxStrategy.cpp  GridAdxStrategy.h  GridLevels.cpp  GridLevels.h  GridStrategy.cpp  GridStrategy.h  GridWithBan.cpp  GridWithBan.h  JsonStrategyConfig.cpp  JsonStrategyConfig.h  MarketState.h  MockStrategy.h  NormalizedIndicator.cpp  NormalizedIndicator.h  RatchetStrategy.cpp  RatchetStrategy.h  (+26 more)
frontend/crypto/strategy/tests/: CMakeLists.txt  GridLevelsTest.cpp
frontend/crypto/ta/: AverageDirectionalIndex.cpp  AverageDirectionalIndex.h  BollingerBands.cpp  BollingerBands.h  CMakeLists.txt  Ratchet.cpp  Ratchet.h  RateOfChange.cpp  RateOfChange.h  RelativeStrengthIndex.cpp  RelativeStrengthIndex.h  SimpleMovingAverage.cpp  SimpleMovingAverage.h  StandardDeviation.cpp  StandardDeviation.h  TimeWeightedMovingAverage.cpp  TimeWeightedMovingAverage.h
frontend/crypto/tests/: BacktestTradingGatewayTest.cpp  BybitTradingGatewayLiveTest.cpp  CMakeLists.txt  ObjectPublisherTest.cpp  PositionManagerTest.cpp  StrategyInstanceTest.cpp
frontend/crypto/trading_engine/: CMakeLists.txt  OrderManager.cpp  OrderManager.h
frontend/crypto/trading_primitives/: CMakeLists.txt  Candle.cpp  Candle.h  ConditionalOrders.cpp  ConditionalOrders.h  Enums.h  MarketOrder.cpp  MarketOrder.h  Ohlc.cpp  Ohlc.h  Position.cpp  Position.h  Side.cpp  Side.h  Signal.cpp  Signal.h  StopLoss.h  Symbol.cpp  Symbol.h  Tpsl.cpp  Tpsl.h  Trade.cpp  Trade.h  TrailingStopLoss.cpp  TrailingStopLoss.h  Volume.cpp  Volume.h  Vwap.cpp  Vwap.h
frontend/crypto/util/: BybitTradesDownloader.cpp  BybitTradesDownloader.h  CMakeLists.txt  CandleBuiler.cpp  CandleBuiler.h  DateTimeConverter.cpp  DateTimeConverter.h  EventBarrier.h  EventChannel.h  EventLoop.h  EventLoopSubscriber.h  EventLoopWithDelays.h  EventObjectChannel.h  EventObjectPublisher.h  EventPublisher.h  EventTimeseriesChannel.h  EventTimeseriesPublisher.h  Events.cpp  Events.h  Guarded.h  ILambdaAcceptor.h  ISubsription.h  LogLevel.cpp  LogLevel.h  Logger.cpp  Logger.h  Macros.h  ObjectPublisher.h  OrdinaryLeastSquares.cpp  OrdinaryLeastSquares.h  Priority.h  Scheduler.h  ThreadSafePriorityQueue.h  ThreadSafeQueue.h  Timerange.h  TimeseriesChannel.h  TimeseriesPublisher.h  WorkStatus.h  WorkerThread.cpp  WorkerThread.h
strategy_parameters/: BBRSI.json  (+19 more)
(+10 files in other folders)
